--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,6 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: app/build/outputs/apk/prod/release/app-prod-release.apk 
-        asset_name: app
+        asset_name: app-prod-release.apk
         asset_content_type: application/vnd.android.package-archive
 
